2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_source_transform, &read_main_am_file):
	Simplify loops which were split in two parts, conditional vs
	unconditional variables.

2001-04-09  Akim Demaille  <akim@epita.fr>

	Handle unconditional values of variables as conditioned by
	`TRUE'.

	* automake.in (%contents): Remove.
	(&generate_makefile, &handle_ltlibraries, &macro_define)
	(&read_am_file, &variable_defined, &variable_conditions_sub)
	(&variable_value, &variable_value_as_list_worker)
	(&variable_value_as_list, &define_pretty_variable)
	(&read_main_am_file): Use
	$conditional, not %contents.
	(&variable_conditions_permutations): Don't return TRUE and FALSE.
	(&variable_conditionally_defined): New.
	(&handle_dist): Use it.
	(&check_ambiguous_conditional): When multiply defined, specify
	under which condition.
	(&macro_define): Use it.
	(&variable_delete): New.
	(&read_am_file): Use it.
	(&am_install_var): Simplify, as all the variables are in
	%conditional now.

2001-04-07  Tom Tromey  <tromey@redhat.com>

	* tests/Makefile.am (XFAIL_TESTS): Added man.test.
	(TESTS): Likewise.
	* tests/man.test: New file.

2001-04-07  Raja R Harinath  <harinath@cs.umn.edu>

	* depcomp (gcc3): Invert test condition.

2001-04-07  Tom Tromey  <tromey@redhat.com>

	* depcomp (gcc3, gcc): Don't assume $? will be set in `if'
	statement.  Report from Larry Jones.

2001-04-07  Raja R Harinath  <harinath@cs.umn.edu>

	* depcomp (sgi): Fix sed expression.  Report from Robert Boehne.

2001-04-01  Tom Tromey  <tromey@redhat.com>

	* java.am (.PHONY clean-am): Removed trailing ":".
	From Per Bothner.  Fixes PR automake/139.

2001-03-28  Akim Demaille  <akim@epita.fr>

	* program.am: Fix a stupid typo: now *all* (not none) the programs
	use `$(EXEEXT)'.
	Reported by Robert Boehne.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&read_am_file, &file_contents): Avoid name clashes
	on $cond.

2001-03-23  Akim Demaille  <akim@epita.fr>
