@@ -1,5 +1,11 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&variable_conditions_sub)
+	(&variable_value_as_list_worker): Remove dead code which used to
+	handle the cases where not all variables were in %conditional.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&handle_source_transform, &read_main_am_file):
 	Simplify loops which were split in two parts, conditional vs
 	unconditional variables.
